--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,15 +1,12 @@
 * {
     box-sizing: border-box;
 }
-.products-container {
-    display: flex;
-}
 .products {
     /* display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px; */
     margin-top: 120px;
 }
-.order-sumamry {
+.order-summary {
     background-color: #FFE0B3;
 }
